Replace of method that is deprecated in Java 9